fix: harden Startup Manager recovery and implement responsive TV console